<resources>
    <string name="app_name">Musician\'s Toolbelt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="tools">Tools</string>
    <string name="recorder">Recorder</string>
    <string name="record">Record</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="need_recorder_permission">Musician\'s Toolbelt needs microphone access to record music, and file access to save your recordings where you can see them.</string>
    <string name="get_started">Get Started</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="abandon_unsaved">You have unsaved changes. Discard?</string>
    <string name="recording_details">Recording Details</string>
    <string name="re_record">Re-record</string>
    <string name="recordings">Recordings</string>
    <string name="filename">Filename</string>
    <string name="recording">Recording</string>
    <string name="backup">Backup</string>
    <string name="songs">Songs</string>
    <string name="last_updated">Last updated</string>
    <string name="created">Created</string>
</resources>
