<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_recorder_permission_denied"
    app:startDestination="@+id/nav_recordings_index">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.benjaminnwarner.musicianstoolbelt.views.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_recordings_index"
        android:name="com.benjaminnwarner.musicianstoolbelt.views.recording.RecordingsIndexFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_recordings_index" >
        <action
            android:id="@+id/nav_action_gallery_to_recording"
            app:destination="@id/nav_recording" >
            <argument
                android:name="recordingId"
                android:defaultValue="-1L" />
            <argument android:defaultValue="0L"
                android:name="id" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.benjaminnwarner.musicianstoolbelt.views.tools.ToolsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_recording"
        android:name="com.benjaminnwarner.musicianstoolbelt.views.recording.RecordingFragment"
        android:label="@string/recording"
        tools:layout="@layout/fragment_recording">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_songs_index"
        android:name="com.benjaminnwarner.musicianstoolbelt.views.songs.SongsIndexFragment"
        android:label="@string/songs"
        tools:layout="@layout/fragment_songs_index"/>

</navigation>
